# spectroview

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
docs/: index.md  reference.md
docs/stylesheets/: extra.css
scripts/: make_demo_cube.py
src/spectroview/: __init__.py  __main__.py  cli.py  examples.py  io.py  model.py  plotting.py  regions.py
src/spectroview/data/: __init__.py
src/spectroview/gui/: __init__.py  app.py  main_window.py  quicklook_maps.py
tests/: conftest.py  test_cli.py  test_examples.py  test_io.py  test_model.py  test_quicklook_maps.py  test_regions.py
