[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectroview"
version = "0.1.0"
description = "Lightweight viewer for SpectroCube datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arseniy Kuzmin", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "spectrocube>=0.1.0",
  "xarray>=2024.1",
  "numpy>=1.26",
  "pyqtgraph>=0.13",
  "PySide6>=6.6",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
  "black>=24.3.0",
  "mypy>=1.8.0",
  "ipython",
  "ipykernel",
  "netCDF4>=1.6",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
  "mdx_truly_sane_lists>=1.3",
  "mkdocs-glightbox",
]

[project.scripts]
spectroview = "spectroview.cli:main"

[project.urls]
Homepage = "https://github.com/queezz/spectroview"
Repository = "https://github.com/queezz/spectroview"
Issues = "https://github.com/queezz/spectroview/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectroview = ["data/*.nc"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E","F","I","B","UP","W","C90"]
lint.ignore = ["E203","E266","E501"]
src = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
